# Trabalho-Final-FCG

./: CMakeLists.txt  README.md
data/shaders/: shader_fragment.glsl  shader_vertex.glsl
fcg/: CMakeLists.txt  README.md
fcg/data/: CMakeLists.txt
fcg/data/VAS0DALXV8R4VFWDRPP05V2OH_obj/: VAS0DALXV8R4VFWDRPP05V2OH.mtl
fcg/data/W6ZJUN6TEFIF56TSWEZ1WE9J7_obj/: W6ZJUN6TEFIF56TSWEZ1WE9J7.mtl
fcg/data/shaders/: shader_fragment.glsl  shader_vertex.glsl
fcg/include/: collisions.hpp
fcg/src/: CMakeLists.txt  ambient.cpp  collisions.cpp  main.cpp
include/: collisions.h
src/: collisions.cpp  main.cpp
